--- a/MACE_Field_Tutorial.ipynb
+++ b/MACE_Field_Tutorial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGpck4eqviAIHoe4Lz2go1",
+      "authorship_tag": "ABX9TyPJaj6zncXWC5llMGWp05rK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,45 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# MACE Field Architecture\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "YLgQqOe2a49X"
+        "id": "9kY30kCYsWOE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this tutorial, we dive into the alterations we have made to the MACE model to incorporate an external perturbing electric field into the MACE architecture, and how to use it to derive derivative properties such as the macroscopic polarisation, Born Effective Charges (BECS) and polarisability."
+      ],
+      "metadata": {
+        "id": "QTndatuysl3C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To learn how the base MACE code works, we highly recommend you look at the [MACE theory tutorial](https://colab.research.google.com/drive/1AlfjQETV_jZ0JQnV5M3FGwAM2SGCl2aU) developed by Will Baldwin and Ilyes Batatia."
+      ],
+      "metadata": {
+        "id": "juQVIyxUs_d0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/mdi-group/mace-field-tutorial.git\n",
+        "!pip install"
+      ],
+      "metadata": {
+        "id": "tzwwemRNslCz"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
