Add bit about code for the readouts

--- a/MACE_Field_Tutorial.ipynb
+++ b/MACE_Field_Tutorial.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM9THRQJTGXeqhFAb8mwzkK",
+      "authorship_tag": "ABX9TyPb/e6vDmVmJ69NnWvdPBPL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -689,7 +689,14 @@
         "self.field_readout = LinearReadoutBlock(hidden_irreps, field_irreps_out)\n",
         "```\n",
         "\n",
-        "which gives us two $l=0$ scalars and a $l=1$ vector *without* mixing the channels."
+        "which gives us two $l=0$ scalars and a $l=1$ vector *without* mixing the channels.\n",
+        "\n",
+        "After we obtain `node_feats` from the `product` block, we obtain these additional features from:\n",
+        "\n",
+        "```\n",
+        "node_out = self.field_readout(node_feats, node_heads).reshape(node_feats.shape[0], -1, 5)\n",
+        "node_energy_feats, node_charge_feats, node_electronic_dipole_feats = node_out[:,:,0],  node_out[:,:,1], -node_out[:,:,2:]\n",
+        "```"
       ],
       "metadata": {
         "id": "qpVs31AXP8y5"
@@ -718,10 +725,44 @@
     {
       "cell_type": "markdown",
       "source": [
-        "where the first term represents the ionic dipole contribution. This \"total dipole\" acts as an atomic decomposition of the total macroscopic polarisation and, dot product with the external electric field, contributes to the total energy."
+        "where the first term represents the ionic dipole contribution.\n",
+        "\n",
+        "In the code we have:\n",
+        "\n",
+        "```\n",
+        "node_atomic_dipole_feats = torch.einsum('ij,ik->ijk', node_charge_feats, data[\"positions\"])\n",
+        "node_dipole_feats = node_atomic_dipole_feats + node_electronic_dipole_feats           \n",
+        "```\n",
+        "\n",
+        "This \"total dipole\" acts as an atomic decomposition of the total macroscopic polarisation and, dot product with the external electric field, contributes to the total energy:"
       ],
       "metadata": {
         "id": "ay2cOBe9GtCe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\begin{equation}\n",
+        "h_{\\alpha,\\tilde{k} 0 0}^{e, (t)} - \\mathbf{p}_{\\alpha, \\tilde{k}}^{(t)} \\cdot \\mathbf{\\mathcal{E}},\n",
+        "\\end{equation}"
+      ],
+      "metadata": {
+        "id": "dB8w4Bp1fFqV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "which we then feed into the final energy `readout` block which mixes the $k$ channels:\n",
+        "\n",
+        "```\n",
+        "node_atomic_dipole_feats = torch.einsum('ij,ik->ijk', node_charge_feats, data[\"positions\"])\n",
+        "node_dipole_feats = node_atomic_dipole_feats + node_electronic_dipole_feats\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "SBNOEd_UgCMs"
       }
     },
     {
