--- a/MACE_Field_Tutorial.ipynb
+++ b/MACE_Field_Tutorial.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPb/e6vDmVmJ69NnWvdPBPL",
+      "authorship_tag": "ABX9TyNUMyMla169lBaEim+c7f4S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
         },
         "outputId": "e1d52a00-321b-48ef-c737-cdf155ec1a01"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,7 @@
         },
         "outputId": "b0e02746-8c36-4865-efc2-eb64eaddac83"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -734,7 +734,7 @@
         "node_dipole_feats = node_atomic_dipole_feats + node_electronic_dipole_feats           \n",
         "```\n",
         "\n",
-        "This \"total dipole\" acts as an atomic decomposition of the total macroscopic polarisation and, dot product with the external electric field, contributes to the total energy:"
+        "This \"total dipole\" acts as an atomic decomposition of the total macroscopic polarisation which, dot product with the external electric field, contributes to the total energy:"
       ],
       "metadata": {
         "id": "ay2cOBe9GtCe"
@@ -757,8 +757,8 @@
         "which we then feed into the final energy `readout` block which mixes the $k$ channels:\n",
         "\n",
         "```\n",
-        "node_atomic_dipole_feats = torch.einsum('ij,ik->ijk', node_charge_feats, data[\"positions\"])\n",
-        "node_dipole_feats = node_atomic_dipole_feats + node_electronic_dipole_feats\n",
+        "node_energies = node_energy_feats - torch.einsum('ijk,k->ij', node_dipole_feats, data[\"electric_field\"])\n",
+        "node_energies = readout(node_energies, node_heads)[num_atoms_arange, node_heads]        \n",
         "```"
       ],
       "metadata": {
