Adding some training stuff

--- a/MACE_Field_Tutorial.ipynb
+++ b/MACE_Field_Tutorial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMT3lyouPUBr0l4rl+n0crP",
+      "authorship_tag": "ABX9TyMOC9UrNNFtyXOe98664cia",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         },
         "outputId": "70678dd7-9e13-48fe-c37a-7eef24044d49"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,19 +297,23 @@
         "from e3nn import o3\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
-        "import ase.io\n",
+        "from ase.io import read, write\n",
         "\n",
         "from mace import data, modules, tools\n",
         "from mace.tools import torch_geometric\n",
         "torch.set_default_dtype(torch.float64)\n",
         "\n",
         "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")"
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "from mace.cli.run_train import main as mace_run_train_main\n",
+        "import sys\n",
+        "import logging"
       ],
       "metadata": {
         "id": "05ZUYWXHxK1d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,12 +329,15 @@
         "    get_edge_vectors_and_lengths,\n",
         "    get_symmetric_displacement,\n",
         ")\n",
-        "from mace.modules.models import ScaleShiftFieldMACE"
+        "from mace.modules.models import (\n",
+        "    MACE,\n",
+        "    ScaleShiftFieldMACE\n",
+        ")"
       ],
       "metadata": {
         "id": "WCm8DnDny9ju"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,12 +352,28 @@
     {
       "cell_type": "code",
       "source": [
+        "ferroelectrics_train = read(\"data/ferroelectric/ferroelectric_train_2040.xyz\", \":\")[:1]\n",
+        "ferroelectrics_valid = read(\"data/ferroelectric/ferroelectric_valid.xyz\", \":\")[:1]\n",
+        "ferroelectrics_test = read(\"data/ferroelectric/ferroelectric_test.xyz\", \":\")[:1]\n",
+        "write(\"data/ferroelectric/ferroelectric_train_1.xyz\", ferroelectrics_train)\n",
+        "write(\"data/ferroelectric/ferroelectric_valid_1.xyz\", ferroelectrics_valid)\n",
+        "write(\"data/ferroelectric/ferroelectric_test_1.xyz\", ferroelectrics_test)"
+      ],
+      "metadata": {
+        "id": "h2yz1bKJo6tG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "%%writefile train_polarisation.yml\n",
         "\n",
         "name: \"ferroelectrics\"\n",
-        "train_file: \"data/ferroelectric/ferroelectric_train_2040.xyz\"\n",
-        "test_file: \"data/ferroelectric/ferroelectric_test.xyz\"\n",
-        "valid_file: \"data/ferroelectric/ferroelectric_valid.xyz\"\n",
+        "train_file: \"data/ferroelectric/ferroelectric_train_1.xyz\"\n",
+        "test_file: \"data/ferroelectric/ferroelectric_test_1.xyz\"\n",
+        "valid_file: \"data/ferroelectric/ferroelectric_valid_1.xyz\"\n",
         "E0s: \"average\"\n",
         "loss: \"universal_field\"\n",
         "energy_weight: 0.0\n",
@@ -378,13 +401,46 @@
         "weight_decay: 1e-8\n",
         "batch_size: 1\n",
         "valid_batch_size: 1\n",
-        "max_num_epochs: 200\n",
-        "distributed: True\n",
+        "max_num_epochs: 50\n",
         "device: cuda\n",
         "seed: 1"
       ],
       "metadata": {
         "id": "O1tltlQf1Ezc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training a MACE Field model"
+      ],
+      "metadata": {
+        "id": "Jxp1cXk6q3DF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_mace_field(config_file_path):\n",
+        "    logging.getLogger().handlers.clear()\n",
+        "    sys.argv = [\"program\", \"--config\", config_file_path]\n",
+        "    mace_run_train_main()"
+      ],
+      "metadata": {
+        "id": "cXyn3ar-rD39"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_mace_field(\"train_polarisation.yml\")"
+      ],
+      "metadata": {
+        "id": "ATPnMBN4rKYz"
       },
       "execution_count": null,
       "outputs": []
